<resources>
    <string name="app_name">MyStoryMedia</string>

    <string name="enter_email">Input Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>
    <string name="reset_pwd_btn">Reset Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="reset_btn">Reset</string>

    <string name="login_error">Login Error</string>
    <string name="input_email_err">Not Input Email</string>
    <string name="input_empty">Not Input</string>
    <string name="not_eqaul_pwd">Not equal password</string>
    <string name="userName_too_short">Too short userName</string>
    <string name="not_valid_email">Not valid Email</string>
    <string name="password_too_short">Too short Password</string>
</resources>